--- a/login.html
+++ b/login.html
@@ -52,19 +52,19 @@
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i>
                     <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
-                        autocomplete="off" class="layui-input">
+                         class="layui-input">
                 </div>
                 <!-- 密码 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
                     <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input">
+                        class="layui-input">
                 </div>
                 <!-- 确认密码 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
                     <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
-                        placeholder="请再次确认密码" autocomplete="off" class="layui-input">
+                        placeholder="请再次确认密码"  class="layui-input">
                 </div>
                 <!-- 注册按钮 -->
                 <div class="layui-form-item">
